@@ -1,6 +1,7 @@
 matchbox-window-manager-2 (0.2.46-1~unreleased) unstable; urgency=low
 
-  * foo
+  Laszlo:
+  * Fixes: NB#125222 - Hildon-desktop crashed when image opened from File Manager.
 
  -- Aapo Kojo <aapo.kojo@nokia.com>  Mon, 29 Jun 2009 10:48:48 +0300
 
